--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker: 
-      - image: maven:3.5.4-jdk-8-alpine # the primary container, where your job's commands are run
+      - image: circleci/openjdk:8-jdk # the primary container, where your job's commands are run
     steps:
       - checkout # check out the code in the project directory
       - run: echo "hello world" # run the `echo` command
