--- a/gradle.conf
+++ b/gradle.conf
@@ -2,7 +2,7 @@ version: 1
 type: gradle
 resolver:
   repo: gradle-virtual
-  serverID: art1
+  serverID: Default-Server
 deployer:
   repo: gradle-virtual
-  serverID: art1
+  serverID: Default-Server
